fixes tip overflow on popout chat

--- a/src/modules/emote_menu/components/Tip.module.css
+++ b/src/modules/emote_menu/components/Tip.module.css
@@ -13,6 +13,9 @@
 .tipDisplayText {
   padding: 0 8px;
   flex-grow: 1;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .closeButton {
